<resources>
    <string name="app_name">bmi_individu1</string>
    <string name="hitung">Hitung</string>
    <string name="perempuan">Perempuan</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="berat_kg">Berat (kg)</string>
    <string name="tinggi_cm">Tinggi (cm)</string>
    <string name="Nama_field" />
    <string name="telepon_" />
    <string name="telepon">Telepon\n</string>
    <string name="Nama">nama</string>
    <string name="Alamat">Alamat</string>
</resources>